--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,10 +2,9 @@
   --color-black: #282b22;
   --color-white: #fff;
   --color-green: #3d4a39;
-  --color-active: #cc9654;
+  --color-active: #f8a847;
   --color-brown: #ae7b3c;
   --color-gray: #f3f3f3;
   --red: #dc1709;
   --blue: #094adc;
-  --opacity: 0.2;
 }
