--- a/src/scss/components/_slider-nav.scss
+++ b/src/scss/components/_slider-nav.scss
@@ -2,6 +2,10 @@
   &__nav {
     display: flex;
     justify-content: center;
+
+    @include mobile {
+      display: none;
+    }
   }
 
   &-icon {
