--- a/src/scss/vendor.scss
+++ b/src/scss/vendor.scss
@@ -1,2 +1,6 @@
 @import "./vendor/normalize";
+@import "../../node_modules/swiper/swiper.min";
+@import "../../node_modules/graph-modal/dist/graph-modal.min";
+@import "../../node_modules/intl-tel-input/build/css/intlTelInput";
+@import "../../node_modules/aos/dist/aos";
 
