--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -44,33 +44,17 @@
     color: var(--color-white);
     background-color: transparent;
 
+    &::placeholder {
+      font-family: "Lato", sans-serif;
+    }
+
     &--text {
       min-height: 110px;
       resize: none;
     }
   }
 
-  &:focus {
-    border: 1 solid var(--color-yellow);
+  .custom-checkbox {
+    @include checkbox;
   }
-
-  .just-validate-error-label {
-    margin-bottom: 3px;
-    font-size: 14px;
-    color: var(--color-white) !important;
-  }
-
-  &__error {
-    visibility: hidden;
-    opacity: 0;
-    position: absolute;
-    font-size: 13px;
-    color: var(--color-red);
-    bottom: -20px;
-    left: 0;
-  }
-}
-
-.custom-checkbox {
-  @include checkbox;
 }
