--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,6 +5,14 @@
   padding: 20px 0;
   width: 100%;
   background-color: var(--color-white);
+
+  &--active {
+    box-shadow: 0 5px 20px rgba(51 51 51 / 15%);
+  }
+
+  @include mobile-l {
+    padding: 15px 0;
+  }
 }
 
 .nav {
@@ -14,7 +22,7 @@
     @include flex-all-sb;
 
     @include mobile-l {
-      --header-height: 96px;
+      --header-height: 75px;
 
       position: absolute;
       right: 0;
@@ -68,7 +76,7 @@
       left: 0;
       bottom: 0;
       width: 100%;
-      height: 1px;
+      height: 2px;
       background-color: currentcolor;
       transform: scale(0);
       transform-origin: center;
@@ -81,13 +89,15 @@
     }
 
     &:hover {
+      color: var(--color-brown);
+
       &::before {
         transform: scale(1);
       }
     }
 
     &:active {
-      color: var(--color-brown);
+      color: var(--color-active);
     }
 
     @include tablet {
