--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -1,5 +1,6 @@
 .graph-modal {
   background-color: rgba(0 0 0 / 80%);
+  cursor: auto;
   backdrop-filter: blur(5px);
 
   &__container {
@@ -10,6 +11,12 @@
     text-align: center;
     color: var(--color-white);
     background-color: var(--color-green);
+
+    &--partners {
+      .form__label--text {
+        display: inline-block;
+      }
+    }
 
     @include tablet {
       padding: 40px;
@@ -27,16 +34,25 @@
     }
 
     @include mobile-s {
-      font-size: 22px;
+      font-size: 20px;
     }
   }
 
   &__close {
-    background-color: var(--color-white);
+    background-image: url("../img/sprite.svg#close");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
 
-  .form__label--file {
-    display: none;
+  .form__label {
+    &--file {
+      display: none;
+    }
+
+    &--text {
+      display: none;
+    }
   }
 
   @include mobile {
