--- a/src/scss/components/_projects.scss
+++ b/src/scss/components/_projects.scss
@@ -49,14 +49,15 @@
   &__title {
     margin: 0;
     padding-top: rem(100);
+    text-align: left;
 
-    ~ p {
+    ~p {
       margin-bottom: rem(40);
       width: 100%;
       max-width: 305px;
       opacity: 0.8;
 
-      @include mobile-s {
+      @include mobile {
         margin-bottom: rem(10);
         text-align: center;
       }
@@ -64,6 +65,7 @@
 
     @include mobile {
       padding-top: rem(50);
+      text-align: center;
     }
   }
 
