--- a/src/scss/components/_question.scss
+++ b/src/scss/components/_question.scss
@@ -51,6 +51,7 @@
 
   &__title {
     margin: 0;
+    text-align: left;
 
     ~p {
       margin-bottom: rem(40);
@@ -62,6 +63,10 @@
         margin-bottom: rem(10);
         text-align: center;
       }
+    }
+
+    @include mobile {
+      text-align: center;
     }
   }
 
