--- a/src/scss/components/_way.scss
+++ b/src/scss/components/_way.scss
@@ -4,22 +4,20 @@
     display: grid;
     align-items: center;
     justify-items: center;
-    grid-template-columns: repeat(3, 1fr);
-    gap: rem(60);
+    grid-gap: rem(60);
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
 
     @include desktop {
-      grid-template-columns: repeat(2, 1fr);
-      gap: rem(30);
+      grid-gap: rem(30);
     }
 
     @include mobile-l {
-      grid-template-columns: repeat(1, 1fr);
+      grid-gap: rem(5);
     }
   }
 
   &__item {
     position: relative;
-    display: block;
     font-weight: 600;
     font-size: 24px;
     line-height: 1;
@@ -34,7 +32,7 @@
         grid-column: 1/3;
       }
 
-      @include mobile-l {
+      @include mobile {
         grid-column: 1;
       }
     }
