--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -5,6 +5,6 @@
   --color-active: #f8a847;
   --color-brown: #ae7b3c;
   --color-gray: #f3f3f3;
-  --red: #dc1709;
-  --blue: #094adc;
+  --color-red: #dc1709;
+  --color-blue: #094adc;
 }
