--- a/src/scss/components/_way.scss
+++ b/src/scss/components/_way.scss
@@ -4,16 +4,16 @@
     display: grid;
     align-items: center;
     justify-items: center;
-    grid-gap: rem(60);
+    gap: rem(20) 0;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
 
-    @include desktop {
-      grid-gap: rem(30);
-    }
+    // @include desktop {
+    //   grid-gap: rem(30);
+    // }
 
-    @include mobile-l {
-      grid-gap: rem(5);
-    }
+    // @include mobile-l {
+    //   grid-gap: rem(5);
+    // }
   }
 
   &__item {
@@ -21,22 +21,46 @@
     font-weight: 600;
     font-size: 24px;
     line-height: 1;
+    padding: 0 rem(30);
 
     &::before {
       counter-increment: li;
       content: counter(li, decimal-leading-zero);
     }
 
+    ::after {
+      content: "";
+      position: absolute;
+      height: 100%;
+      width: 1px;
+      background-color: var(--color-black);
+      top: 0;
+      left: 0;
+      opacity: 0.2;
+
+      @include mobile-ss {
+        display: none;
+      }
+    }
+
     &:last-child {
-      @include desktop {
+      @include tablet {
         grid-column: 1/3;
       }
 
-      @include mobile {
+      @include mobile-l {
         grid-column: 1;
       }
     }
+
+    @include tablet {
+      padding: 0 rem(15);
+    }
   }
+
+  // &__box {
+  //   display: flex;
+  // }
 
   &__title {
     margin-bottom: rem(30);
@@ -49,39 +73,6 @@
     @include mobile {
       padding-top: rem(30);
       font-size: 20px;
-    }
-  }
-
-  &__box {
-    position: relative;
-
-    &::before {
-      content: "";
-      position: absolute;
-      right: -30px;
-      top: -135px;
-      border-right: 1px solid var(--color-black);
-      height: 460px;
-      background: linear-gradient(0deg, rgba(61 74 57 / 10%), rgba(61 74 57 / 10%));
-      opacity: 0.2;
-
-      @include mobile-l {
-        content: none;
-      }
-    }
-
-    &::after {
-      content: "";
-      position: absolute;
-      left: -30px;
-      top: -135px;
-      border-left: 1px solid var(--color-black);
-      height: 460px;
-      opacity: 0.2;
-
-      @include mobile-l {
-        content: none;
-      }
     }
   }
 }
