--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -182,6 +182,10 @@ section {
 
       &:hover {
         color: var(--color-brown);
+
+        svg {
+          color: var(--color-brown);
+        }
       }
 
       @include mobile-s {
